--- a/src/app/student/student/student.component.html
+++ b/src/app/student/student/student.component.html
@@ -42,4 +42,27 @@
         </tbody>
       </table>
       </div>
-    
+
+
+<br>
+
+
+
+    <!-- <div>
+
+        <input [(ngModel)]="n1" class="form-control w-25" name="ddd">
+        <button type="button" class="btn btn-primary"(click)="addpip()">add</button>
+        <ul>
+          <li *ngFor="let user of users">
+            {{user}}
+          </li>
+        </ul>
+        ============================
+        <ul>
+          <li *ngFor="let user of users |filterarr">
+            {{user}}
+          </li>
+        </ul>
+  
+      </div>
+     -->
