--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-student></app-student>
+<!-- hiligth Custom directive -->
+<div class="container">
+<h1 appHighlight hcolor="pink">
+welcome
+</h1>
+<h1 appHighlight hcolor="yellow"> Dear</h1>
+
+</div>
+<!-- <app-student></app-student> -->
 <br/>
 <br/>
 <app-department></app-department>
